# human-pose-estimation

./: .gitignore  CHANGELOG.md  HYROX 人体动作计数与违规检测任务清单.md  HYROX动作指导实现.md  Lite与Full模型档位回归.md  MANIFEST.in  README.md  RELEASING.md  app.py  hyrox_four_layer_scoring_codex_plan.md  main.py  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-rtmw-gpu.txt  requirements-yolo.txt  requirements.txt  start_public_web.py  start_web.py  任务说明.md  使用说明.md  公网多人摄像头网页版任务清单.md  动作评分标准实现方案.md  启动公网访问.bat  启动网页.bat  多摄像头设计与实施路线.md  姿态模型使用更改和延迟优化.md  实时姿态显示延迟优化.md  延迟审计与高速录像验收.md  模型优化方案.md  程序成熟度审计与实施清单.md  统一模型输出格式.md  网页版使用说明.md
configs/: basketball_shot_v1.yaml  basketball_views.yaml  hyrox_golden_videos.json  product_pose.yaml  reference_features.yaml  reference_quality.yaml  squat_basic_v1.yaml  squat_camera_views.yaml
hyrox/: __init__.py  action_names.py  base.py  config.py  contact.py  features.py  feedback.py  floor_reference.py  foot_events.py  geometry.py  landmark_names.py  registry.py  validity.py  view_policy.py  violations.py
models/: README.md
outputs/: hyrox_burpee_broad_jump_smoke.csv  hyrox_farmers_carry_smoke.csv  hyrox_rowing_smoke.csv  hyrox_skierg_smoke.csv  hyrox_sled_pull_smoke.csv  hyrox_sled_push_smoke.csv
scripts/: run_hyrox_comparison.py
src/: __init__.py  configuration.py  doctor.py  import_test.py  latency_audit.py  output_management.py  output_schema.py  paths.py  product_pose.py  realtime_pose.py  runtime_hand.py  runtime_logging.py  smoke_test.py  version.py
tests/: _reference_helpers.py  _shot_helpers.py  _squat_helpers.py  conftest.py  test_action_switching.py  test_angles.py  test_backend_policy.py  test_burpee_broad_jump.py  test_burpee_validity.py  test_camera_backend_benchmark.py  test_camera_diagnostics_js.py  test_camera_views.py  test_chain_features.py  test_clipper.py  test_compare.py  test_configuration_validation.py  test_consistency.py  test_contact_detection.py  test_display_pose_filter_js.py  test_distance_violations.py  test_doctor.py  test_documentation_sync.py  test_dtw.py  test_farmers_carry.py  test_floor_reference.py  test_foot_events.py  test_fourth_batch_maturity.py  test_hand_landmarks.py  test_hyrox_foundation.py  test_hyrox_replay_tool.py  test_hyrox_rounds_8_10.py  test_imports.py  test_latency_audit.py  test_latency_baseline.py  test_lunge_validity.py  test_mediapipe_backend_candidates.py  test_model_tiers.py  test_normalization.py  test_observability.py  test_output_governance.py  (+45 more)
tools/: __init__.py  benchmark_camera_backends.py  benchmark_latency_baseline.py  check_multicamera.py  check_text_format.py  compare_pose_model_tiers.py  pose_latency_benchmark.py  precompute_sample_poses.py  replay_hyrox_video.py  run_endurance_test.py  (+1 more)
webui/: app.py  (+5 more)
(+470 files in other folders)
